[#164217377]: fix overlapping cover image

--- a/src/app/article/article.scss
+++ b/src/app/article/article.scss
@@ -289,6 +289,7 @@
 .category-image {
   height: auto;
   width: auto;
+  max-height: 500px;
   max-width: 96%;
   background-repeat: no-repeat;
   background-size: cover;
